--- a/configs/container.config
+++ b/configs/container.config
@@ -1,4 +1,4 @@
 process {
     // guppy container config is located in the guppy_gpu module
-    withLabel: minimap2         { container = 'nanozoo/abricate:1.0.1--8960147' }
+    withLabel: minimap2         { container = 'nanozoo/minimap2:2.26--ef54a1d' }
 }
