Nreport and chromosome

--- a/configs/nodes.config
+++ b/configs/nodes.config
@@ -1,3 +1,4 @@
 process {   
     withLabel: minimap2         { cpus = 24 ; memory = '32 GB' }
+    withLabel: plasflow         { cpus = 18 ; memory = '24 GB' }
 }
