--- a/configs/container.config
+++ b/configs/container.config
@@ -1,4 +1,5 @@
 process {
     // guppy container config is located in the guppy_gpu module
     withLabel: minimap2         { container = 'nanozoo/minimap2:2.26--d9ef6b6' }
+    withLabel:  plasflow        { container = 'quay.io/biocontainers/plasflow:1.1.0--py35_0' }
 }
