--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ params {
 // options
     max_cores = Runtime.runtime.availableProcessors()
     cores = Runtime.runtime.availableProcessors().intdiv(4)
-    mem = "12"
+    memory = "16"
     profile = false
     help = false
 
@@ -16,6 +16,7 @@ params {
     fasta = ''
     degen = false
     depth = "10"
+    motif = "5"
 
 
 // folder structure
