--- a/configs/container.config
+++ b/configs/container.config
@@ -1,5 +1,7 @@
 process {
     // guppy container config is located in the guppy_gpu module
     withLabel: minimap2         { container = 'nanozoo/minimap2:2.26--d9ef6b6' }
-    withLabel:  plasflow        { container = 'quay.io/biocontainers/plasflow:1.1.0--py35_0' }
+    withLabel: plasflow         { container = 'quay.io/biocontainers/plasflow:1.1.0--py35_0' }
+    withLabel: seqkit           { container = 'nanozoo/seqkit:2.3.1--401ce9e'}
+    withLabel: samtools         { container = 'nanozoo/samtools:1.17--6420653'}
 }
