--- a/configs/local.config
+++ b/configs/local.config
@@ -1,4 +1,6 @@
 process {
     withLabel: minimap2         { cpus = params.cores }
     withLabel: plasflow         { cpus = params.cores }
+    withLabel: samtools         { cpus = params.cores }
+    withLabel: seqkit           { cpus = params.cores }
 }
