added logomaker for degen masking

--- a/configs/nodes.config
+++ b/configs/nodes.config
@@ -1,4 +1,7 @@
 process {   
     withLabel: minimap2         { cpus = 24 ; memory = '32 GB' }
     withLabel: plasflow         { cpus = 18 ; memory = '24 GB' }
+    withLabel: seqkit           { cpus = 4 ; memory = '8 GB'  }
+    withLabel: ggplot2          { cpus = 2 ; memory = '6 GB'  }
+    withLabel: samtools         { cpus = 6 ; memory = '12 GB' }
 }
