--- a/configs/container.config
+++ b/configs/container.config
@@ -4,4 +4,5 @@ process {
     withLabel: plasflow         { container = 'quay.io/biocontainers/plasflow:1.1.0--py35_0' }
     withLabel: seqkit           { container = 'nanozoo/seqkit:2.3.1--401ce9e'}
     withLabel: samtools         { container = 'nanozoo/samtools:1.17--6420653'}
+    withLabel: ggplot2          { container = 'nanozoo/ggplot2:3.3.1--e13f257' }
 }
