--- a/configs/local.config
+++ b/configs/local.config
@@ -3,4 +3,5 @@ process {
     withLabel: plasflow         { cpus = params.cores }
     withLabel: samtools         { cpus = params.cores }
     withLabel: seqkit           { cpus = params.cores }
+    withLabel: ggplot2          { cpus = params.cores }    
 }
