correct depth masking

--- a/configs/container.config
+++ b/configs/container.config
@@ -5,4 +5,5 @@ process {
     withLabel: seqkit           { container = 'nanozoo/seqkit:2.3.1--401ce9e'}
     withLabel: samtools         { container = 'nanozoo/samtools:1.17--6420653'}
     withLabel: ggplot2          { container = 'nanozoo/ggplot2:3.3.1--e13f257' }
+    withLabel: bedtools         { container = 'nanozoo/bedtools:2.31.0--7e7b842' }
 }
