--- a/configs/local.config
+++ b/configs/local.config
@@ -1,7 +1,8 @@
 process {
+    withLabel: bedtools         { cpus = params.cores }        
+    withLabel: ggplot2          { cpus = params.cores }   
     withLabel: minimap2         { cpus = params.cores }
     withLabel: plasflow         { cpus = params.cores }
     withLabel: samtools         { cpus = params.cores }
     withLabel: seqkit           { cpus = params.cores }
-    withLabel: ggplot2          { cpus = params.cores }    
 }
