--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,7 @@
 manifest {
     mainScript = 'main.nf'
     recurseSubmodules = true
+    nextflowVersion = '>=23.04.0'
 }
 
 params {
@@ -67,9 +68,11 @@ profiles {
         bucketDir = 'gs://case-tmp-dir/MPO/'
         google {  
             project = 'case-dev-302214'
-            zone = 'europe-west1-b,europe-west1-c,europe-west3-b,europe-west3-a,europe-west4-b,europe-west4-a'
-            lifeSciences.preemptible = true
-            lifeSciences.bootDiskSize = 20.GB
+            location = 'europe-west4'
+            batch{ 
+                spot = true
+                bootDiskSize = 20.GB
+            }    
             }
         includeConfig 'configs/container.config'
         includeConfig 'configs/nodes.config'
@@ -78,7 +81,7 @@ profiles {
         process { 
             errorStrategy = { task.exitStatus in [10,14,143,137,104,134,139] ? 'retry' : 'ignore' }
             maxRetries = 3
-            executor = 'google-lifesciences'
+            executor = 'google-batch'
         }
     }
 
