--- a/nextflow.config
+++ b/nextflow.config
@@ -28,11 +28,13 @@ params {
 
 timeline {
   enabled = true
+  overwrite = true
   file = "${params.runinfo}/execution_timeline.html"
 }
 
 report {
   enabled = true
+  overwrite = true  
   file = "${params.runinfo}/execution_report.html"
 }
 
