--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,13 @@ report {
   file = "${params.runinfo}/execution_report.html"
 }
 
+
+dag {
+  enabled = true
+  file = "${params.runinfo}/dag_chart.html"
+}
+
+
 profiles {
   
     standard {
