--- a/nextflow.config
+++ b/nextflow.config
@@ -97,7 +97,7 @@ profiles {
     }
 
     slurm {
-        includeConfig 'configs/node.config'
+        includeConfig 'configs/nodes.config'
         executor {
             name = "slurm"
             queueSize = 100
@@ -106,7 +106,7 @@ profiles {
             // pollInterval = '30 sec'
         }        
         process.cache = "lenient"
-        process.errorStrategy = 'ignore'
+        //process.errorStrategy = 'ignore'
     }
 
 // engines
