change --all to --keep and add further params to ignore INDELs to keep coordinates

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,6 @@ params {
     memory = "16"
     profile = false
     help = false
-    all = false
 
 // inputs
     fastq = ''
@@ -19,6 +18,7 @@ params {
     frequency = false
     depth = "10"
     motif = "5"
+    keep_coordinates = false
 
 
 // folder structure
