adjust nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ manifest {
 params {
 // options
     max_cores = Runtime.runtime.availableProcessors()
-    cores = Runtime.runtime.availableProcessors().intdiv(4)
+    cores = Runtime.runtime.availableProcessors().intdiv(2)
     memory = "16"
     profile = false
     help = false
@@ -23,7 +23,7 @@ params {
 
 // folder structure
     output = 'results'
-    workdir = "work/nextflow-MPO"
+    workdir = "work/nextflow-MPOA"
     runinfo = "nextflow-run-infos"
     cachedir = "singularity-images"
 }
@@ -75,15 +75,15 @@ profiles {
     }
 
     ukj_cloud { 
-        workDir = "/tmp/nextflow-MPO-$USER"
+        workDir = "/tmp/nextflow-MPOA-$USER"
         docker { enabled = true }
-        bucketDir = 'gs://case-tmp-dir/MPO/'
+        bucketDir = 'gs://case-tmp-dir/MPOA/'
         google {  
             project = 'case-dev-302214'
             location = 'europe-west4'
             batch{ 
                 spot = true
-                bootDiskSize = 20.GB
+                bootDiskSize = 50.GB
             }    
             }
         includeConfig 'configs/container.config'
