bwa inclusion and code simplify

--- a/configs/container.config
+++ b/configs/container.config
@@ -1,9 +1,11 @@
 process {
     // guppy container config is located in the guppy_gpu module
+    withLabel: bedtools         { container = 'nanozoo/bedtools:2.31.0--7e7b842' }
+    withLabel: bowtie2          { container = 'nanozoo/bowtie2:2.5.3--6dd1a06' }
+    withLabel: bwa              { container = 'nanozoo/bwa:0.7.17--5d3a7e3'}
+    withLabel: ggplot2          { container = 'nanozoo/ggplot2:3.4.0--4856650' }
     withLabel: minimap2         { container = 'nanozoo/minimap2:2.26--d9ef6b6' }
     withLabel: plasflow         { container = 'nanozoo/plasflow:1.1.0--c85355d' }
-    withLabel: seqkit           { container = 'nanozoo/seqkit:2.3.1--401ce9e'}
     withLabel: samtools         { container = 'nanozoo/samtools:1.17--6420653'}
-    withLabel: ggplot2          { container = 'nanozoo/ggplot2:3.4.0--4856650' }
-    withLabel: bedtools         { container = 'nanozoo/bedtools:2.31.0--7e7b842' }
+    withLabel: seqkit           { container = 'nanozoo/seqkit:2.3.1--401ce9e'}
 }
