--- a/configs/local.config
+++ b/configs/local.config
@@ -1,5 +1,7 @@
 process {
     withLabel: bedtools         { cpus = params.cores }        
+    withLabel: bowtie2          { cpus = params.cores }        
+    withLabel: bwa              { cpus = params.cores }
     withLabel: ggplot2          { cpus = params.cores }   
     withLabel: minimap2         { cpus = params.cores }
     withLabel: plasflow         { cpus = params.cores }
