--- a/configs/nodes.config
+++ b/configs/nodes.config
@@ -1,8 +1,10 @@
 process {   
+    withLabel: bedtools         { cpus = 6 ; memory = '20 GB'  }    
+    withLabel: bowtie2          { cpus = 24 ; memory = '32 GB' }        
+    withLabel: bwa              { cpus = 24 ; memory = '32 GB' }
+    withLabel: ggplot2          { cpus = 2 ; memory = '6 GB'  }
     withLabel: minimap2         { cpus = 24 ; memory = '32 GB' }
     withLabel: plasflow         { cpus = 18 ; memory = '24 GB' }
-    withLabel: seqkit           { cpus = 4 ; memory = '8 GB'  }
-    withLabel: ggplot2          { cpus = 2 ; memory = '6 GB'  }
-    withLabel: bedtools         { cpus = 6 ; memory = '20 GB'  }    
     withLabel: samtools         { cpus = 6 ; memory = { 24.GB * task.attempt } ; maxRetries = 8 ; errorStrategy = { task.exitStatus in 130..140 ? 'retry' : 'terminate' } }
+    withLabel: seqkit           { cpus = 4 ; memory = '8 GB'  }
 }
