--- a/configs/container.config
+++ b/configs/container.config
@@ -7,5 +7,6 @@ process {
     withLabel: minimap2         { container = 'nanozoo/minimap2:2.26--d9ef6b6' }
     withLabel: plasflow         { container = 'nanozoo/plasflow:1.1.0--c85355d' }
     withLabel: samtools         { container = 'nanozoo/samtools:1.17--6420653'}
+    withLabel: frequency        { container = 'nanozoo/samtools:1.17--6420653'}    
     withLabel: seqkit           { container = 'nanozoo/seqkit:2.3.1--401ce9e'}
 }
