--- a/configs/nodes.config
+++ b/configs/nodes.config
@@ -6,5 +6,6 @@ process {
     withLabel: minimap2         { cpus = 24 ; memory = '32 GB' }
     withLabel: plasflow         { cpus = 18 ; memory = '24 GB' }
     withLabel: samtools         { cpus = 6 ; memory = { 24.GB * task.attempt } ; maxRetries = 8 ; errorStrategy = { task.exitStatus in 130..140 ? 'retry' : 'terminate' } }
+    withLabel: frequency        { cpus = 6 ; memory = { 24.GB * task.attempt } ; maxRetries = 8 ; errorStrategy = { task.exitStatus in 130..140 ? 'retry' : 'terminate' } }
     withLabel: seqkit           { cpus = 4 ; memory = '8 GB'  }
 }
