--- a/configs/local.config
+++ b/configs/local.config
@@ -6,6 +6,6 @@ process {
     withLabel: minimap2         { cpus = params.cores }
     withLabel: plasflow         { cpus = params.cores }
     withLabel: samtools         { cpus = params.cores }
-    withLabel: samtools         { cpus = params.max_cores }    
+    withLabel: frequency        { cpus = params.max_cores }    
     withLabel: seqkit           { cpus = params.cores }
 }
