Nextflow syntax update

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,8 @@
 manifest {
     mainScript = 'main.nf'
+    name = 'MPOA'
     recurseSubmodules = true
-    nextflowVersion = '>=23.04.0'
+    nextflowVersion = '!>=24.10.4'
 }
 
 params {
@@ -41,13 +42,11 @@ report {
   file = "${params.runinfo}/execution_report.html"
 }
 
-
 dag {
   enabled = true
   overwrite = true
   file = "${params.runinfo}/dag_chart.html"
 }
-
 
 profiles {
   
@@ -59,7 +58,6 @@ profiles {
         workDir = params { workdir }
         includeConfig 'configs/local.config'
     }
-
 
 // executer
     local {
@@ -76,9 +74,8 @@ profiles {
     }
 
     ukj_cloud { 
-        workDir = "/tmp/nextflow-MPOA-$USER"
+        workDir = "gs://case-tmp-dir/nextflow-MPOA/"
         docker { enabled = true }
-        bucketDir = 'gs://case-tmp-dir/MPOA/'
         google {  
             project = 'case-dev-302214'
             location = 'europe-west4'
@@ -118,12 +115,6 @@ profiles {
 
     }
 
-    node {
-        docker { enabled = true }
-        includeConfig 'configs/container.config'
-        includeConfig 'configs/node.config'
-    }
-
     singularity {
         singularity { 
                 enabled = true
@@ -134,6 +125,4 @@ profiles {
         }
         includeConfig 'configs/container.config'
     }
-
-
 }
