--- a/nextflow.config
+++ b/nextflow.config
@@ -55,7 +55,7 @@ profiles {
                 name = "local"
                	cpus = params.max_cores
         }
-        workDir = params { workdir }
+        workDir = params.workdir
         includeConfig 'configs/local.config'
     }
 
@@ -70,7 +70,9 @@ profiles {
     }
 
     stub {
-        cpus = 2
+        process {
+            cpus = 2
+        }
     }
 
     ukj_cloud { 
