--- a/nextflow.config
+++ b/nextflow.config
@@ -70,8 +70,9 @@ profiles {
     }
 
     stub {
-        params{
-            cpus = 2
+        params {
+            max_cores = 2
+            cores = 2
         }
     }
 
