--- a/configs/nodes.config
+++ b/configs/nodes.config
@@ -5,7 +5,7 @@ process {
     withLabel: ggplot2          { cpus = 2 ; memory = '6 GB'  }
     withLabel: minimap2         { cpus = 24 ; memory = '32 GB' }
     withLabel: plasflow         { cpus = 18 ; memory = '24 GB' }
-    withLabel: samtools         { cpus = 6 ; memory = { 24.GB * task.attempt } ; maxRetries = 8 ; errorStrategy = { task.exitStatus in 130..140 ? 'retry' : 'terminate' } }
-    withLabel: frequency        { cpus = 6 ; memory = { 24.GB * task.attempt } ; maxRetries = 8 ; errorStrategy = { task.exitStatus in 130..140 ? 'retry' : 'terminate' } }
+    withLabel: samtools         { cpus = 6 ; memory = { 24.GB * task.attempt } ; maxRetries = 4 ; errorStrategy = { task.exitStatus in 130..140 ? 'retry' : 'terminate' } }
+    withLabel: frequency        { cpus = 12 ; memory = '32 GB' ; maxRetries = 2 ; errorStrategy = { task.exitStatus in 130..140 ? 'retry' : 'terminate' } }
     withLabel: seqkit           { cpus = 4 ; memory = '8 GB'  }
 }
