--- a/nextflow.config
+++ b/nextflow.config
@@ -55,7 +55,7 @@ profiles {
                 name = "local"
                	cpus = params.max_cores
         }
-        workDir = params { workdir }
+        workDir = params.workdir 
         includeConfig 'configs/local.config'
     }
 
@@ -89,7 +89,7 @@ profiles {
 
         // cloud error strategy
         process { 
-            errorStrategy = { task.exitStatus in [10,14,143,137,104,134,139] ? 'retry' : 'ignore' }
+            //errorStrategy = { task.exitStatus in [10,14,143,137,104,134,139] ? 'retry' : 'ignore' }
             maxRetries = 3
             executor = 'google-batch'
         }
