syntax update & test profile integration

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,9 @@ manifest {
     nextflowVersion = '!>=24.10.4'
 }
 
+// disable ansi console printing (ignore lint warning)
+    ansi = false
+
 params {
 // options
     max_cores = Runtime.runtime.availableProcessors()
@@ -75,6 +78,10 @@ profiles {
             cores = 2
         }
     }
+
+    // test_profile
+    test_fasta { }
+    test_fastq { }
 
     ukj_cloud { 
         workDir = "gs://case-tmp-dir/nextflow-MPOA/"
