implementation of test profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,7 +6,7 @@ manifest {
 }
 
 // disable ansi console printing (ignore lint warning)
-    ansi = false
+    //ansi = false
 
 params {
 // options
@@ -79,9 +79,7 @@ profiles {
         }
     }
 
-    // test_profile
-    test_fasta { }
-    test_fastq { }
+
 
     ukj_cloud { 
         workDir = "gs://case-tmp-dir/nextflow-MPOA/"
@@ -135,4 +133,6 @@ profiles {
         }
         includeConfig 'configs/container.config'
     }
+    // test_profile
+    test{ }
 }
