adressed reviewer comments

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,11 +2,11 @@ manifest {
     mainScript = 'main.nf'
     name = 'MPOA'
     recurseSubmodules = true
-    nextflowVersion = '!>=24.10.4'
+    nextflowVersion = '!>=25.07.0'
 }
 
 // disable ansi console printing (ignore lint warning)
-    //ansi = false
+    ansi = false
 
 params {
 // options
